public/style.css
* {
    font-family: sans-serif;
}

body {
    padding: 0;
    margin: 0;
}

div.container_bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 100%;
    z-index: -2;
}

.colour_live {
    padding: 40px;
    width: calc(100% - 80px);
    margin-bottom: 10px;
}

.addColour {
    padding: 10px;
    font-size: 16px;
    font-weight: bold;
    border: 3px solid white;
    color: white;
    background-color: black;
    border-radius: 2px;
    cursor: pointer;
    transition: 0.2s ease;
}

.addColour:hover {
    background-color: white;
    color: black;
    border: 3px solid black;
}

.container {
    width: calc(100% - 20px);
    padding: 10px;
    max-width: 990px;
    margin: auto;
}

.colour {
    border-radius: 20px;
    margin-top: 10px;
    margin-bottom: 20px;
    min-height: 200px;
    padding: 30px;
    display: flex;
    justify-content: end;
    flex-direction: column;
    position: relative;
    -webkit-box-shadow: 3px 5px 9px -4px rgba(0, 0, 0, 0.42);
    -moz-box-shadow: 3px 5px 9px -4px rgba(0, 0, 0, 0.42);
    box-shadow: 3px 5px 9px -4px rgba(0, 0, 0, 0.42);
}

div.average_colour {
    margin-top: 10px;
    padding: 10px;
    border-radius: 3px;
    border: 2px solid rgba(0, 0, 0, 0.5)
}

input {
    width: 100%;
    margin-bottom: 20px;
    margin-top: 10px;
    font-size: 16px;
}

input,
a {
    cursor: 'pointer';
}


label {
    color: white;
    padding: 5px;
    border-radius: 2px;
    background: black;
    margin-bottom: 20px;
}

.colour h3 {
    margin-top: 5px;
    margin-bottom: 5px;
}

button.removeColour {
    background: rgba(0, 0, 0, 0);
    border: 2px solid;
    font-size: 24px;
    width: 40px;
    height: 40px;
    position: absolute;
    top: 20px;
    right: 20px;
    cursor: pointer;
    border-radius: 50%;
    padding-top: 5px;
}

button.removeColour:hover {
    border: 4px solid;
}

